Add alias for 'git grep'.
Source: http://travisjeffery.com/b/2012/02/search-a-git-repo-like-a-ninja/

--- a/git/gitconfig.template
+++ b/git/gitconfig.template
@@ -17,6 +17,7 @@
   pod = pull origin develop
   st  = status -sb
   su  = submodule update
+  g   = grep --break --heading --line-number
   up  = !git pull --rebase --prune $@ && git submodule update --init --recursive
   save  = !git add -A && git commit -m 'SAVEPOINT'
   wip   = !git add -u && git commit -m "WIP"
